--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./assets/furcast-logo.png" />
+    <link rel="icon" href="./manifest-assets/furcast-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://kit.fontawesome.com/6471591dde.js" crossorigin="anonymous"></script>
     <title>FurCast</title>
   </head>
   <body>
